--- a/src/evangelist-site/Views/Home/Index.cshtml
+++ b/src/evangelist-site/Views/Home/Index.cshtml
@@ -7,13 +7,15 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@opt.Value.Twitter">
 <meta name="twitter:creator" content="@opt.Value.Twitter">
-<meta name="twitter:title" content="@(opt.Value.ShortName).me - all of @(opt.Value.FirstName)'s online stuff in one place">
+<meta name="twitter:title" content="@(opt.Value.ShortName)
+      
+       - all of @(opt.Value.FirstName)'s online stuff in one place">
 <meta name="twitter:description" content="Find, read, download all of @(opt.Value.FullName)'s online Links, Articles, GitHubs, Videos, Demos, Speaking Information, Talks, Slides and shizzle in one place">
 <meta name="twitter:image" content="@(opt.Value.Webroot)/images/TwitterCard.PNG">
 
 <meta property="og:url" content="@(opt.Value.Webroot)" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="@(opt.Value.ShortName).me - all of @(opt.Value.FirstName)'s online stuff in one place" />
+<meta property="og:title" content="@(opt.Value.ShortName) - all of @(opt.Value.FirstName)'s online stuff in one place" />
 <meta property="og:description" content="Find, read, download all of @(opt.Value.FullName)'s online Links, Articles, GitHubs, Videos, Demos, Speaking Information, Talks, Slides and shizzle in one place" />
 <meta property="og:image" content="@(opt.Value.Webroot)/images/TwitterCard.PNG" />
  }
